--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -10,20 +10,6 @@
 </head>
 <body>
 
-  <!-- 00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  02 Meet your crew
-
-  Commander
-  Douglas Hurley
-
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2. -->
-
   <header>
     <div id="logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
@@ -59,10 +45,10 @@
     </div>
 
     <div id="bullets">
-      <div class="miniBullet active" ></div>
-      <div class="miniBullet"></div>
-      <div class="miniBullet"></div>
-      <div class="miniBullet"></div>
+      <a id="defaultBtn" class="miniBullet active" ></a>
+      <a href="crew-specialist.html" class="miniBullet"></a>
+      <a href="crew-pilot.html" class="miniBullet"></a>
+      <a href="crew-engineer.html" class="miniBullet"></a>
     </div>
 
     <div id="commanderName">
@@ -78,3 +64,4 @@
   <script src="commander.js"></script>
 </body>
 </html>
+ 
