--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -16,6 +16,14 @@
     </div>
     <nav>
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
+      <div id="navForTabletAndDesktop">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="destination-moon.html">Destination</a></li>
+          <li><a href="crew-commander.html">Crew</a></li>
+          <li><a href="technology-vehicle.html">Technology</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div id="toggleNavBar">
@@ -25,7 +33,7 @@
             <li><a href="index.html">00 HOME</a></li>
             <li><a href="destination-moon.html">01 DESTINATION</a></li>
             <li><a href="crew-commander.html">02 CREW</a></li>
-            <li><a href="">03 TECHNOLOGY</a></li>
+            <li><a href="technology-vehicle.html">03 TECHNOLOGY</a></li>
           </ul>
         </div>
 
@@ -64,14 +72,16 @@
 
     <hr>
 
-    <div id="distance">
-      <span id="avgDistance">AVG. DISTANCE</span>
-      <span id="distanceKm"></span>
-    </div>
-    <div id="travelTime">
-      <span id="avgTimeTravel">EST. TRAVEL TIME</span>
-      <span id="avgTime"></span>
-    </div>
+    <div id="info">
+      <div id="distance">
+        <span id="avgDistance">AVG. DISTANCE</span>
+        <span id="distanceKm"></span>
+      </div>
+      <div id="travelTime">
+        <span id="avgTimeTravel">EST. TRAVEL TIME</span>
+        <span id="avgTime"></span>
+      </div>
+    </div>  
 
   </section>
 
