--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,8 +14,19 @@
     <div id="logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
     </div>
+
+    <div id="navLine"></div>
+
     <nav>
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
+      <div id="navForTabletAndDesktop">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="destination-moon.html">Destination</a></li>
+          <li><a href="crew-commander.html">Crew</a></li>
+          <li><a href="technology-vehicle.html">Technology</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div id="toggleNavBar">
@@ -25,7 +36,7 @@
             <li><a href="index.html">00 HOME</a></li>
             <li><a href="destination-moon.html">01 DESTINATION</a></li>
             <li><a href="crew-commander.html">02 CREW</a></li>
-            <li><a href="">03 TECHNOLOGY</a></li>
+            <li><a href="technology-vehicle.html">03 TECHNOLOGY</a></li>
           </ul>
         </div>
 
