--- a/starter-code/crew-engineer.html
+++ b/starter-code/crew-engineer.html
@@ -14,8 +14,19 @@
     <div id="logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
     </div>
+
+    <div id="navLine"></div>
+
     <nav>
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
+      <div id="navForTabletAndDesktop">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="destination-moon.html">Destination</a></li>
+          <li><a href="crew-commander.html" class="active">Crew</a></li>
+          <li><a href="technology-vehicle.html">Technology</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div id="toggleNavBar">
@@ -45,22 +56,23 @@
     </div>
 
     <div id="bullets">
-      <a href="crew-commander.html" class="miniBullet" ></a>
+      <a href="crew-commander.html" id="defaultBtn" class="miniBullet" ></a>
       <a href="crew-specialist.html" class="miniBullet"></a>
       <a href="crew-pilot.html" class="miniBullet"></a>
-      <a class="miniBullet active" id="defaultBtn"></a>
+      <a href="crew-engineer.html" class="miniBullet activate"></a>
     </div>
 
     <div id="commanderName">
-      <h3>Flight Engineer</h3>
-      <span>Anousheh Ansari</span>
-      <p class="bio">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
-        Ansari was the fourth self-funded space tourist, the first self-funded woman to 
-        fly to the ISS, and the first Iranian in space.</p>
+      <h3>Commander</h3>
+      <span>Douglas Hurley</span>
+      <p class="bio"> Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
+        and former NASA astronaut. He launched into space for the third time as 
+        commander of Crew Dragon Demo-2.</p>
     </div>
 
   </section>  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="engineer.js"></script>
 </body>
-</html> 
+</html>
+ 
