--- a/starter-code/technology-capsule.html
+++ b/starter-code/technology-capsule.html
@@ -14,8 +14,19 @@
     <div id="logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
     </div>
+
+    <div id="navLine"></div>
+
     <nav>
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
+      <div id="navForTabletAndDesktop">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="destination-moon.html">Destination</a></li>
+          <li><a href="crew-commander.html">Crew</a></li>
+          <li><a href="technology-vehicle.html" class="active">Technology</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div id="toggleNavBar">
@@ -42,19 +53,21 @@
     <div id="vehicleImg">
     </div>
 
-    <div id="bullets">
-      <a href="technology-vehicle.html" class="miniBullet">1</a>
-      <a href="technology-spaceport.html " class="miniBullet">2</a>
-      <a id="defaultBtn" class="miniBullet active">3</a>
-    </div>
-
-    <div id="vehicleName">
-      <h3>The terminology...</h3>
-      <span>Space capsule</span>
-      <p class="bio">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
-        capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
-        you'll spend your time during the flight. It includes a space gym, cinema, 
-        and plenty of other activities to keep you entertained.</p>
+    <div id="together">
+      <div id="bullets">
+        <a href="technology-vehicle.html" id="defaultBtn" class="miniBullet">1</a>
+        <a href="technology-spaceport.html " class="miniBullet">2</a>
+        <a class="activate miniBullet">3</a>
+      </div>
+  
+      <div id="vehicleName">
+        <h3>The terminology...</h3>
+        <span>Launch vehicle</span>
+        <p class="bio">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
+          payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
+          WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
+          it's quite an awe-inspiring sight on the launch pad!</p>
+      </div>
     </div>
 
   </section>  
@@ -63,6 +76,3 @@
   <script src="capsule.js"></script>
 </body>
 </html>
-
-
-
