changing text on crew pages

--- a/starter-code/technology-spaceport.html
+++ b/starter-code/technology-spaceport.html
@@ -62,11 +62,8 @@
   
       <div id="vehicleName">
         <h3>The terminology...</h3>
-        <span>Launch vehicle</span>
-        <p class="bio">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-          payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-          WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-          it's quite an awe-inspiring sight on the launch pad!</p>
+        <span>SpacePort</span>
+        <p class="bio">A spaceport or cosmodrome is a site for launching(or receiving)spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is idially situated to take advantage of the Earth's rotation for launch.</p>
       </div>
     </div>
 
