--- a/starter-code/crew-pilot.html
+++ b/starter-code/crew-pilot.html
@@ -63,11 +63,9 @@
     </div>
 
     <div id="commanderName">
-      <h3>Commander</h3>
-      <span>Douglas Hurley</span>
-      <p class="bio"> Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-        and former NASA astronaut. He launched into space for the third time as 
-        commander of Crew Dragon Demo-2.</p>
+      <h3>Pilot</h3>
+      <span>Victor Glover</span>
+      <p class="bio">Pilot </p>
     </div>
 
   </section>  
