--- a/starter-code/crew-specialist.html
+++ b/starter-code/crew-specialist.html
@@ -63,11 +63,9 @@
     </div>
 
     <div id="commanderName">
-      <h3>Commander</h3>
-      <span>Douglas Hurley</span>
-      <p class="bio"> Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-        and former NASA astronaut. He launched into space for the third time as 
-        commander of Crew Dragon Demo-2.</p>
+      <h3>Mission Specialist</h3>
+      <span>Mark Shuttleworth</span>
+      <p class="bio">Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind the Linus-based Ubuntu operating system. Shuttleworth became the first South African to travel to space as a space tourist.</p>
     </div>
 
   </section>  
