--- a/starter-code/technology-capsule.html
+++ b/starter-code/technology-capsule.html
@@ -62,11 +62,8 @@
   
       <div id="vehicleName">
         <h3>The terminology...</h3>
-        <span>Launch vehicle</span>
-        <p class="bio">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-          payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-          WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-          it's quite an awe-inspiring sight on the launch pad!</p>
+        <span>Space Capsule</span>
+        <p class="bio">A space capsule is and often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema and plenty of other activities to keep you entertained.</p>
       </div>
     </div>
 
