problem was in index.html, cuz file was in folder 'starter code' and when you want to deploy project on github pages, if you don't have index.html, it will by defaul upload readMe

--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -21,7 +21,7 @@
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
       <div id="navForTabletAndDesktop">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="destination-moon.html">Destination</a></li>
           <li><a href="crew-commander.html" class="active">Crew</a></li>
           <li><a href="technology-vehicle.html">Technology</a></li>
