--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="navForTabletAndDesktop">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="destination-moon.html">Destination</a></li>
-          <li><a href="crew-commander.html">Crew</a></li>
-          <li><a href="technology-vehicle.html">Technology</a></li>
+          <li><a href="/starter-code/destination-moon.html">Destination</a></li>
+          <li><a href="/starter-code/crew-commander.html">Crew</a></li>
+          <li><a href="/starter-code/technology-vehicle.html">Technology</a></li>
         </ul>
       </div>
     </nav>
@@ -34,9 +34,9 @@
         <div id="listOffers">
           <ul>
             <li><a href="index.html">00 HOME</a></li>
-            <li><a href="destination-moon.html">01 DESTINATION</a></li>
-            <li><a href="crew-commander.html">02 CREW</a></li>
-            <li><a href="technology-vehicle.html">03 TECHNOLOGY</a></li>
+            <li><a href="/starter-code/destination-moon.html">01 DESTINATION</a></li>
+            <li><a href="/starter-code/crew-commander.html">02 CREW</a></li>
+            <li><a href="/starter-code/technology-vehicle.html">03 TECHNOLOGY</a></li>
           </ul>
         </div>
 
