--- a/starter-code/technology-spaceport.html
+++ b/starter-code/technology-spaceport.html
@@ -21,7 +21,7 @@
       <svg id="hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
       <div id="navForTabletAndDesktop">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="destination-moon.html">Destination</a></li>
           <li><a href="crew-commander.html">Crew</a></li>
           <li><a href="technology-vehicle.html" class="active">Technology</a></li>
@@ -33,7 +33,7 @@
       <div id="list">
         <div id="listOffers">
           <ul>
-            <li><a href="index.html">00 HOME</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="destination-moon.html">01 DESTINATION</a></li>
             <li><a href="crew-commander.html">02 CREW</a></li>
             <li><a href="technology-vehicle.html">03 TECHNOLOGY</a></li>
