--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="navForTabletAndDesktop">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="/starter-code/destination-moon.html">Destination</a></li>
-          <li><a href="/starter-code/crew-commander.html">Crew</a></li>
-          <li><a href="/starter-code/technology-vehicle.html">Technology</a></li>
+          <li><a href="./starter-code/destination-moon.html">Destination</a></li>
+          <li><a href="./starter-code/crew-commander.html">Crew</a></li>
+          <li><a href="./starter-code/technology-vehicle.html">Technology</a></li>
         </ul>
       </div>
     </nav>
