--- a/starter-code/crew-pilot.html
+++ b/starter-code/crew-pilot.html
@@ -65,7 +65,7 @@
     <div id="commanderName">
       <h3>Pilot</h3>
       <span>Victor Glover</span>
-      <p class="bio">Pilot </p>
+      <p class="bio">Pilot on the first operational flight of the SpaceX Crew Dragon to the International Space Station. Glover is a commander in the U.S. Navy where he pilots an F/A-18. He was a crew member of Expedition 64, and served as a station systems flight engineer.</p>
     </div>
 
   </section>  
