--- a/starter-code/destination-mars.html
+++ b/starter-code/destination-mars.html
@@ -66,9 +66,7 @@
     <div id="planetAndAbout">
         <h1 class="planetName"></h1>
 
-        <p id="textAboutPlanet">See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-        regain perspective and come back refreshed. While you’re there, take in some history 
-        by visiting the Luna 2 and Apollo 11 landing sites.</p>
+        <p id="textAboutPlanet">Don't forget to pack your hiking boots. You'll need them to tackle Olympus Mons, the tallest planetary mountain in out solar system. It's two and a half times the size of Everest!</p>
     </div>  
 
     <hr>
