--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -33,7 +33,7 @@
       <div id="list">
         <div id="listOffers">
           <ul>
-            <li><a href="index.html">00 HOME</a></li>
+            <li><a href="../index.html">00 HOME</a></li>
             <li><a href="destination-moon.html">01 DESTINATION</a></li>
             <li><a href="crew-commander.html">02 CREW</a></li>
             <li><a href="technology-vehicle.html">03 TECHNOLOGY</a></li>
