--- a/starter-code/crew-engineer.html
+++ b/starter-code/crew-engineer.html
@@ -63,11 +63,9 @@
     </div>
 
     <div id="commanderName">
-      <h3>Commander</h3>
-      <span>Douglas Hurley</span>
-      <p class="bio"> Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-        and former NASA astronaut. He launched into space for the third time as 
-        commander of Crew Dragon Demo-2.</p>
+      <h3>Flight Engineer</h3>
+      <span>Anousheh Ansari</span>
+      <p class="bio">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first selt-funded woman to fly to the ISS, and the first Iranian in space.</p>
     </div>
 
   </section>  
