--- a/starter-code/destination-europa.html
+++ b/starter-code/destination-europa.html
@@ -66,9 +66,7 @@
     <div id="planetAndAbout">
         <h1 class="planetName"></h1>
 
-        <p id="textAboutPlanet">See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-        regain perspective and come back refreshed. While you’re there, take in some history 
-        by visiting the Luna 2 and Apollo 11 landing sites.</p>
+        <p id="textAboutPlanet"></p>
     </div>  
 
     <hr>
